--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                 ...
             </div>
             <p>
-                Each line contains a "logic gate," a computer's elementary building block, and identifies what wires in the circuit should be hooked up to it. But writing boolean logic circuits is very hard, so I came up with a solution: I wrote one big logic circuit that emulates an 8bit computer that can run programs written in the Assembly programming language. So now, you can write programs that run in Bitvm using Assembly.
+                Each line contains a "logic gate," a computer's elementary building block, and identifies what wires in the circuit should be hooked up to it. But writing boolean logic circuits is very hard, so I came up with a solution: I wrote one big logic circuit that emulates an 8bit computer that can run programs written in the Assembly programming language. So now, you can write programs for bitvm using Assembly.
             </p>
             <p>
-                The simulation on this page gives you some example programs you can run in my 8bit computer and shows you how the internal state of the virtual machine, which updates on every tick of the clock. Hopefully you will soon be able to write your own programs, run them in bitvm, and even lock up some bitcoins so that someone can only spend them if they run your program correctly.
+                The simulation on this page gives you some example programs you can run in my 8bit computer and shows you the internal state of the virtual machine, which updates on every tick of the clock. Hopefully you will soon be able to write your own programs, run them in bitvm, and even lock up some bitcoins so that someone can only spend them if they run your program correctly.
             </p>
             <p>
                 Here are the Assembly commands currently supported by my computer:
