--- a/index.html
+++ b/index.html
@@ -50,14 +50,22 @@
     </head>
     <body>
         <h1>Welcome to the 8 bit cpu for bitvm</h1>
+        <p>Where bitcoin learns to be turing complete</p>
         <div class="cpu">
+            <h3>
+                Step 1. Pick a program you want to run
+            </h3>
             <button class="load_counting_program">Load counting program</button>
             <button class="load_bounded_loop_test">Load bounded loop test</button>
-            <br><br>
+            <h3>
+                Step 2. Increment the clock and watch what the computer does
+            </h3>
             <button class="next">Increment clock</button>
             <button class="automate_clock">Auto increment clock</button>
             <button class="stop_clock">Stop clock</button>
-            <br><br>
+            <h3>
+                Step 3. Learn what in the world is happening
+            </h3>
             <button class="learn">Learn about bitvm</button>
             <br><br>
             <div class="visualizer_container">
