--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <h3>
                 Step 1. Pick a program you want to run
             </h3>
-            <button class="load_counting_program">Load counting program</button>
-            <button class="load_bounded_loop_test">Load bounded loop test</button>
+            <button class="load_counting_program">Counting program</button>
+            <button class="load_bounded_loop_test">Bounded loop test</button>
             <h3>
                 Step 2. Increment the clock and watch what the computer does
             </h3>
