--- a/index.html
+++ b/index.html
@@ -36,6 +36,28 @@
                 background-color: #ccc;
                 padding: 1rem;
             }
+            .cpu_state {
+                margin-top: 0;
+                margin-bottom: .5rem;
+            }
+            .cpu_label, .ram {
+                margin-top: 0;
+                margin-bottom: 0;
+            }
+            .cpu_label {
+                font-weight: bold;
+            }
+            .use_your_own_form {
+                border: 1px solid black;
+                border-radius: 1rem;
+                padding: 1rem;
+                margin-top: 1rem;
+            }
+            .paste_program {
+                width: 100%;
+                height: 5rem;
+                border: 1px solid #888;
+            }
             @media screen and (max-width: 600px) {
             }
         </style>
@@ -57,6 +79,15 @@
             </h3>
             <button class="load_counting_program">Counting program</button>
             <button class="load_bounded_loop_test">Bounded loop test</button>
+            <button class="use_your_own">Use your own</button>
+            <div class="use_your_own_form hidden">
+                <p>Paste your program here</p>
+                <textarea class="paste_program"></textarea>
+                <p><button class="submit_program">Submit</button></p>
+            </div>
+            <div class="yay hidden">
+                <p>Your program is loaded. Start incrementing the clock and watch it run.</p>
+            </div>
             <h3>
                 Step 2. Increment the clock and watch what the computer does
             </h3>
@@ -67,7 +98,11 @@
                 Step 3. Learn what in the world is happening
             </h3>
             <button class="learn">Learn about bitvm</button>
-            <br><br>
+<!--             <h3>
+                Step 4. Write a program yourself
+            </h3>
+            <button class="write">Try it</button>
+ -->            <br><br>
             <div class="visualizer_container">
                 <div class="explainer"></div>
                 <div class="halted hidden">
@@ -122,6 +157,40 @@
         <script>
             var output = '';
             var stop = true;
+            $( '.use_your_own' ).onclick = () => {
+                $( '.paste_program' ).value = "";
+                $( '.use_your_own_form' ).classList.remove( "hidden" );
+            }
+            $( '.submit_program' ).onclick = () => {
+                try {
+                    var input_prep = $( '.paste_program' ).value;
+                    if ( input_prep.length == 127 ) input_prep = input_prep.padStart( 163, "0" );
+                    if ( input_prep.length == 163 ) input_prep = JSON.stringify( input_prep.split( "" ) );
+                    var input = JSON.parse( input_prep );
+                    if ( typeof input[ 0 ] == "string" ) {
+                        var new_input = [];
+                        input.forEach( item => new_input.push( Number( item ) ) );
+                        input = new_input;
+                    }
+                } catch ( e ) {
+                    var example_prep = "01001110001011110111010001100000001111110100111001110000011001000000000000000000000000000000000000000000000000000000000000110010".padStart( 163, "0" ).split( "" );
+                    var example = [];
+                    example_prep.forEach( item => example.push( Number( item ) ) );
+                    return alert( `Error, your binary was invalid! Ensure it looks similar to this, with exactly 163 elements:\n\n${JSON.stringify( example )}` );
+                }
+                $( '.visualizer' ).innerHTML = displayState( input );
+                output = evalCircuit( circuit, input );
+                $( '.use_your_own_form' ).classList.add( "hidden" );
+                $( '.yay' ).classList.remove( "hidden" );
+                var fadeval = .6;
+                var fader = () => {
+                    console.log( fadeval );
+                    fadeval = Number( "." + String( ( fadeval * 10 ) - 1 ) );
+                    $( '.yay' ).style.backgroundColor = `rgba( 255, 255, 0, ${fadeval} )`;
+                    if ( fadeval > 0 ) setTimeout( fader, 200 );
+                }
+                fader();
+            }
             $$( '.go_back' ).forEach( item => {
                 item.onclick = () => {
                     $( '.cpu' ).classList.remove( "hidden" );
@@ -318,37 +387,39 @@
             }
             var displayState = state => {
                 if ( typeof state == "string" ) state = state.split( "" );
-                var template = `program counter<br>
-                ${state[ 0 ]}${state[ 1 ]}${state[ 2 ]}${state[ 3 ]}<br>
-                microinstruction counter<br>
-                ${state[ 4 ]}${state[ 5 ]}<br>
-                memory address register<br>
-                ${state[ 6 ]}${state[ 7 ]}${state[ 8 ]}${state[ 9 ]}<br>
-                carry flag<br>
-                ${state[ 10 ]}<br>
-                register A<br>
-                ${state[ 11 ]}${state[ 12 ]}${state[ 13 ]}${state[ 14 ]}${state[ 15 ]}${state[ 16 ]}${state[ 17 ]}${state[ 18 ]}<br>
-                register B<br>
-                ${state[19]}${state[20]}${state[21]}${state[22]}${state[23]}${state[24]}${state[25]}${state[26]}<br>
-                instruction register<br>
-                ${state[27]}${state[28]}${state[29]}${state[30]}${state[31]}${state[32]}${state[33]}${state[34]}<br>
-                ram<br>
-                ${state[35]}${state[36]}${state[37]}${state[38]}${state[39]}${state[40]}${state[41]}${state[42]}<br>
-                ${state[43]}${state[44]}${state[45]}${state[46]}${state[47]}${state[48]}${state[49]}${state[50]}<br>
-                ${state[51]}${state[52]}${state[53]}${state[54]}${state[55]}${state[56]}${state[57]}${state[58]}<br>
-                ${state[59]}${state[60]}${state[61]}${state[62]}${state[63]}${state[64]}${state[65]}${state[66]}<br>
-                ${state[67]}${state[68]}${state[69]}${state[70]}${state[71]}${state[72]}${state[73]}${state[74]}<br>
-                ${state[75]}${state[76]}${state[77]}${state[78]}${state[79]}${state[80]}${state[81]}${state[82]}<br>
-                ${state[83]}${state[84]}${state[85]}${state[86]}${state[87]}${state[88]}${state[89]}${state[90]}<br>
-                ${state[91]}${state[92]}${state[93]}${state[94]}${state[95]}${state[96]}${state[97]}${state[98]}<br>
-                ${state[99]}${state[100]}${state[101]}${state[102]}${state[103]}${state[104]}${state[105]}${state[106]}<br>
-                ${state[107]}${state[108]}${state[109]}${state[110]}${state[111]}${state[112]}${state[113]}${state[114]}<br>
-                ${state[115]}${state[116]}${state[117]}${state[118]}${state[119]}${state[120]}${state[121]}${state[122]}<br>
-                ${state[123]}${state[124]}${state[125]}${state[126]}${state[127]}${state[128]}${state[129]}${state[130]}<br>
-                ${state[131]}${state[132]}${state[133]}${state[134]}${state[135]}${state[136]}${state[137]}${state[138]}<br>
-                ${state[139]}${state[140]}${state[141]}${state[142]}${state[143]}${state[144]}${state[145]}${state[146]}<br>
-                ${state[147]}${state[148]}${state[149]}${state[150]}${state[151]}${state[152]}${state[153]}${state[154]}<br>
-                ${state[155]}${state[156]}${state[157]}${state[158]}${state[159]}${state[160]}${state[161]}${state[162]}<br>
+                var a_str = `${state[ 11 ]}${state[ 12 ]}${state[ 13 ]}${state[ 14 ]}${state[ 15 ]}${state[ 16 ]}${state[ 17 ]}${state[ 18 ]}`;
+                console.log( "reg A:", parseInt( a_str, 2 ) );
+                var template = `<p class="cpu_label">program counter</p>
+                <p class="cpu_state">${state[ 0 ]}${state[ 1 ]}${state[ 2 ]}${state[ 3 ]}</p>
+                <p class="cpu_label">microinstruction counter</p>
+                <p class="cpu_state">${state[ 4 ]}${state[ 5 ]}</p>
+                <p class="cpu_label">memory address register</p>
+                <p class="cpu_state">${state[ 6 ]}${state[ 7 ]}${state[ 8 ]}${state[ 9 ]}</p>
+                <p class="cpu_label">carry flag</p>
+                <p class="cpu_state">${state[ 10 ]}</p>
+                <p class="cpu_label">register A</p>
+                <p class="cpu_state">${state[ 11 ]}${state[ 12 ]}${state[ 13 ]}${state[ 14 ]}${state[ 15 ]}${state[ 16 ]}${state[ 17 ]}${state[ 18 ]}</p>
+                <p class="cpu_label">register B</p>
+                <p class="cpu_state">${state[19]}${state[20]}${state[21]}${state[22]}${state[23]}${state[24]}${state[25]}${state[26]}</p>
+                <p class="cpu_label">instruction register</p>
+                <p class="cpu_state">${state[27]}${state[28]}${state[29]}${state[30]}${state[31]}${state[32]}${state[33]}${state[34]}</p>
+                <p class="cpu_label">ram</p>
+                <p class="cpu_state ram">${state[35]}${state[36]}${state[37]}${state[38]}${state[39]}${state[40]}${state[41]}${state[42]}</p>
+                <p class="cpu_state ram">${state[43]}${state[44]}${state[45]}${state[46]}${state[47]}${state[48]}${state[49]}${state[50]}</p>
+                <p class="cpu_state ram">${state[51]}${state[52]}${state[53]}${state[54]}${state[55]}${state[56]}${state[57]}${state[58]}</p>
+                <p class="cpu_state ram">${state[59]}${state[60]}${state[61]}${state[62]}${state[63]}${state[64]}${state[65]}${state[66]}</p>
+                <p class="cpu_state ram">${state[67]}${state[68]}${state[69]}${state[70]}${state[71]}${state[72]}${state[73]}${state[74]}</p>
+                <p class="cpu_state ram">${state[75]}${state[76]}${state[77]}${state[78]}${state[79]}${state[80]}${state[81]}${state[82]}</p>
+                <p class="cpu_state ram">${state[83]}${state[84]}${state[85]}${state[86]}${state[87]}${state[88]}${state[89]}${state[90]}</p>
+                <p class="cpu_state ram">${state[91]}${state[92]}${state[93]}${state[94]}${state[95]}${state[96]}${state[97]}${state[98]}</p>
+                <p class="cpu_state ram">${state[99]}${state[100]}${state[101]}${state[102]}${state[103]}${state[104]}${state[105]}${state[106]}</p>
+                <p class="cpu_state ram">${state[107]}${state[108]}${state[109]}${state[110]}${state[111]}${state[112]}${state[113]}${state[114]}</p>
+                <p class="cpu_state ram">${state[115]}${state[116]}${state[117]}${state[118]}${state[119]}${state[120]}${state[121]}${state[122]}</p>
+                <p class="cpu_state ram">${state[123]}${state[124]}${state[125]}${state[126]}${state[127]}${state[128]}${state[129]}${state[130]}</p>
+                <p class="cpu_state ram">${state[131]}${state[132]}${state[133]}${state[134]}${state[135]}${state[136]}${state[137]}${state[138]}</p>
+                <p class="cpu_state ram">${state[139]}${state[140]}${state[141]}${state[142]}${state[143]}${state[144]}${state[145]}${state[146]}</p>
+                <p class="cpu_state ram">${state[147]}${state[148]}${state[149]}${state[150]}${state[151]}${state[152]}${state[153]}${state[154]}</p>
+                <p class="cpu_state ram">${state[155]}${state[156]}${state[157]}${state[158]}${state[159]}${state[160]}${state[161]}${state[162]}</p>
                 `;
                 return template;
             }
