--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
             $( '.use_your_own' ).onclick = () => {
                 $( '.paste_program' ).value = "";
                 $( '.use_your_own_form' ).classList.remove( "hidden" );
+                $( '.explainer' ).innerHTML = ``;
             }
             $( '.submit_program' ).onclick = () => {
                 try {
