--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
                 height: 5rem;
                 border: 1px solid #888;
             }
+            .col1, .col2 {
+                display: inline-block;
+                vertical-align: top;
+                margin: 1rem;
+            }
+            .col2 {
+                text-align: center;
+            }
             @media screen and (max-width: 600px) {
             }
         </style>
@@ -88,7 +96,7 @@
                 <textarea class="paste_program"></textarea>
                 <p><button class="submit_program">Submit</button></p>
             </div>
-            <div class="yay hidden">
+            <div class="own_loaded hidden">
                 <p>Your program is loaded. Start incrementing the clock and watch it run.</p>
             </div>
             <h3>
@@ -165,9 +173,9 @@
             var output = [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0];
             var stop = true;
             var show_decimal = 0;
+            var what_to_show = 1;
             $( '.toggle_decimal' ).onclick = () => {
                 show_decimal = INV( show_decimal );
-                console.log( output );
                 $( '.visualizer' ).innerHTML = displayState( output );
             }
             $( '.use_your_own' ).onclick = () => {
@@ -192,15 +200,15 @@
                     example_prep.forEach( item => example.push( Number( item ) ) );
                     return alert( `Error, your binary was invalid! Ensure it looks similar to this, with exactly 163 elements:\n\n${JSON.stringify( example )}` );
                 }
-                $( '.visualizer' ).innerHTML = displayState( input );
-                output = evalCircuit( circuit, input );
+                output = input;
+                $( '.visualizer' ).innerHTML = displayState( output );
+                output = evalCircuit( circuit, output );
                 $( '.use_your_own_form' ).classList.add( "hidden" );
-                $( '.yay' ).classList.remove( "hidden" );
+                $( '.own_loaded' ).classList.remove( "hidden" );
                 var fadeval = .6;
                 var fader = () => {
-                    console.log( fadeval );
                     fadeval = Number( "." + String( ( fadeval * 10 ) - 1 ) );
-                    $( '.yay' ).style.backgroundColor = `rgba( 255, 255, 0, ${fadeval} )`;
+                    $( '.own_loaded' ).style.backgroundColor = `rgba( 255, 255, 0, ${fadeval} )`;
                     if ( fadeval > 0 ) setTimeout( fader, 200 );
                 }
                 fader();
@@ -261,12 +269,10 @@
                 });
                 $$( '.next' ).forEach( item => {
                     item.onclick = () => {
-                        $( '.visualizer' ).innerHTML = displayState( output );
                         var init = output;
                         output = evalCircuit( circuit, output );
-                        if ( init == output ) {
-                            $( '.halted' ).classList.remove( "hidden" );
-                        }
+                        $( '.visualizer' ).innerHTML = displayState( output );
+                        if ( init == output ) $( '.halted' ).classList.remove( "hidden" );
                     }
                 });
                 $$( '.stop_clock' ).forEach( item => {
@@ -333,12 +339,10 @@
                 });
                 $$( '.next' ).forEach( item => {
                     item.onclick = () => {
-                        $( '.visualizer' ).innerHTML = displayState( output );
                         var init = output;
                         output = evalCircuit( circuit, output );
-                        if ( init == output ) {
-                            $( '.halted' ).classList.remove( "hidden" );
-                        }
+                        $( '.visualizer' ).innerHTML = displayState( output );
+                        if ( init == output ) $( '.halted' ).classList.remove( "hidden" );
                     }
                 });
                 $$( '.stop_clock' ).forEach( item => {
@@ -352,20 +356,18 @@
                 });
             }
             $( '.next' ).onclick = () => {
-                $( '.visualizer' ).innerHTML = displayState( output );
                 var init = output;
                 output = evalCircuit( circuit, output );
-                if ( init == output ) {
-                    $( '.halted' ).classList.remove( "hidden" );
-                }
+                $( '.visualizer' ).innerHTML = displayState( output );
+                if ( init == output ) $( '.halted' ).classList.remove( "hidden" );
             }
             $( '.automate_clock' ).onclick = () => stop = false;
             $( '.stop_clock' ).onclick = () => stop = true;
             setInterval( () => {
                 if ( stop ) return;
                 var init = output;
-                $( '.visualizer' ).innerHTML = displayState( output );
                 output = evalCircuit( circuit, output );
+                $( '.visualizer' ).innerHTML = displayState( output );
                 if ( init == output ) {
                     $( '.halted' ).classList.remove( "hidden" );
                     $( '.stop_clock' ).click();
@@ -478,37 +480,41 @@
                 var ram13_dec = parseInt( ram13_str, 2 );
                 var ram14_dec = parseInt( ram14_str, 2 );
                 var ram15_dec = parseInt( ram15_str, 2 );
-                var template = `<p class="cpu_label">program counter</p>
-                <p class="cpu_state">${show_decimal ? pc_dec : pc_str}</p>
-                <p class="cpu_label">microinstruction counter</p>
-                <p class="cpu_state">${show_decimal ? mc_dec : mc_str}</p>
-                <p class="cpu_label">memory address register</p>
-                <p class="cpu_state">${show_decimal ? m_dec : m_str}</p>
-                <p class="cpu_label">carry flag</p>
-                <p class="cpu_state">${state[ 10 ]}</p>
-                <p class="cpu_label">register A</p>
-                <p class="cpu_state">${show_decimal ? a_dec : a_str}</p>
-                <p class="cpu_label">register B</p>
-                <p class="cpu_state">${show_decimal ? b_dec : b_str}</p>
-                <p class="cpu_label">instruction register</p>
-                <p class="cpu_state">${show_decimal ? i_cmd_dec : i_cmd_str} ${show_decimal ? i_arg_dec : i_arg_str}</p>
-                <p class="cpu_label">ram</p>
-                <p class="cpu_state ram">${show_decimal ? ram00_dec : ram00_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram01_dec : ram01_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram02_dec : ram02_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram03_dec : ram03_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram04_dec : ram04_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram05_dec : ram05_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram06_dec : ram06_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram07_dec : ram07_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram08_dec : ram08_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram09_dec : ram09_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram10_dec : ram10_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram11_dec : ram11_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram12_dec : ram12_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram13_dec : ram13_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram14_dec : ram14_str}</p>
-                <p class="cpu_state ram">${show_decimal ? ram15_dec : ram15_str}</p>
+                var template = `<div class="col1">
+                    <p class="cpu_label">program counter</p>
+                    <p class="cpu_state">${show_decimal ? pc_dec : pc_str}</p>
+                    <p class="cpu_label">microinstruction counter</p>
+                    <p class="cpu_state">${show_decimal ? mc_dec : mc_str}</p>
+                    <p class="cpu_label">memory address register</p>
+                    <p class="cpu_state">${show_decimal ? m_dec : m_str}</p>
+                    <p class="cpu_label">carry flag</p>
+                    <p class="cpu_state">${state[ 10 ]}</p>
+                    <p class="cpu_label">register A</p>
+                    <p class="cpu_state">${show_decimal ? a_dec : a_str}</p>
+                    <p class="cpu_label">register B</p>
+                    <p class="cpu_state">${show_decimal ? b_dec : b_str}</p>
+                    <p class="cpu_label">instruction register</p>
+                    <p class="cpu_state">${show_decimal ? i_cmd_dec : i_cmd_str} ${show_decimal ? i_arg_dec : i_arg_str}</p>
+                </div>
+                <div class="col2">
+                    <p class="cpu_label">ram</p>
+                    <p class="cpu_state ram">${show_decimal ? ram00_dec : ram00_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram01_dec : ram01_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram02_dec : ram02_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram03_dec : ram03_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram04_dec : ram04_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram05_dec : ram05_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram06_dec : ram06_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram07_dec : ram07_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram08_dec : ram08_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram09_dec : ram09_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram10_dec : ram10_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram11_dec : ram11_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram12_dec : ram12_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram13_dec : ram13_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram14_dec : ram14_str}</p>
+                    <p class="cpu_state ram">${show_decimal ? ram15_dec : ram15_str}</p>
+                </div>
                 `;
                 return template;
             }
